# reddit-tui

./: .gitignore  Cargo.toml  README.md  default-config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: mdbook.yml
book/: book.toml
book/src/: README.md  SUMMARY.md
book/src/guide/: configuration.md  installation.md
src/: commands.rs  main.rs  reddit.rs  terminal.rs
src/api/: auth.rs  mod.rs  posts.rs
src/handlers/: app.rs  config.rs  event.rs  mod.rs  post.rs  state.rs
src/ui/: mod.rs
src/utils/: app.rs  event.rs  mod.rs  pathing.rs
