[package]
name = "reddit-tui"
version = "0.1.0"
authors = ["Xithrius <xithrius@gmail.com>"]
edition = "2018"
description = "Reddit in the terminal."
documentation = "https://github.com/Xithrius/reddit-tui"
homepage = "https://github.com/Xithrius/reddit-tui"
repository = "https://github.com/Xithrius/reddit-tui"
license = "MIT OR Apache-2.0"
keywords = ["tui", "reddit"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.22.1"
tui = { version = "0.16.0", default-features = false, features = ['crossterm'] }
anyhow = "1.0.55"
rand = "0.8.4"
unicode-width = "0.1.9"
futures = "0.3.19"
tokio = { version = "1.15.0", features = ["full"] }
reqwest = { version = "0.11.9", features = ["json", "multipart"] }
serde_json = "1.0.75"
serde = { version = "1.0.133", features = ["derive"] }
toml = "0.5.8"
chrono = "0.4"
rustyline = "9.1.2"

[[bin]]
bench = false
path = "src/main.rs"
name = "treddit"
