[package]
name = "reddit-tui"
version = "0.1.0"
authors = ["Xithrius <xithrius@gmail.com>"]
edition = "2021"
description = "Reddit in the terminal."
documentation = "https://github.com/Xithrius/reddit-tui"
homepage = "https://github.com/Xithrius/reddit-tui"
repository = "https://github.com/Xithrius/reddit-tui"
license = "MIT OR Apache-2.0"
keywords = ["tui", "reddit"]
categories = ["command-line-utilities"]

[dependencies]
tui = { version = "0.19.0", default-features = false, features = [ "crossterm" ] }
tokio = { version = "1.21.1", features = [ "full" ] }
reqwest = { version = "0.11.11", features = [ "json", "multipart" ] }
serde = { version = "1.0.144", features = [ "derive" ] }
crossterm = "0.25.0"
unicode-width = "0.1.9"
futures = "0.3.23"
serde_json = "1.0.85"
toml = "0.5.9"
chrono = "0.4.22"
rustyline = "10.0.0"
color-eyre = "0.6.2"

[[bin]]
bench = false
path = "src/main.rs"
name = "treddit"

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
lto = "thin"
